updates to resources

--- a/bedstuy.html
+++ b/bedstuy.html
@@ -49,7 +49,9 @@
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
-        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn as an great opportunity.  It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other institutions.</p>
+        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn
+          as an great opportunity. It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other
+          institutions.</p>
         <hr>
         <p>64,000 square feet</p>
         <hr>
@@ -57,7 +59,9 @@
         <hr>
         <p>9-story elevator building</p>
         <hr>
-        <img class="roundmap" src="img/roundmap.png">
+        <div class="sp-maps">
+          <img class="img-circle roundmap" src="img/Map_Bedford.jpg">
+        </div>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -74,7 +78,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/bedstuy_render.png">
+        <img src="img/Bed-Stuy-Render.png">
         <p class="case-textblock">Constructed in 2004, the asset features 43 unit, many with balconies and terraces</p>
         <img class="img-circle" src="img/BedStuy/circle-min.jpg">
         <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers, and young professionals.</p>
