--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           </ol>
           <div class="carousel-inner home-carousel-img" role="listbox">
             <div class="carousel-item active" id="firstSlide">
-              <img src="img/HomePage_flatiron_view_181-min.jpg" alt="Flatiron View">
+              <img src="img/Home_1.jpg" alt="Flatiron View">
             </div>
             <div class="carousel-item" id="secondSlide">
-              <img src="img/HomePage_adams_office_098-min.jpg" alt="The Office">
+              <img src="img/Home_2.jpg" alt="The Office">
             </div>
           </div>
         </div>
