--- a/irvingplace.html
+++ b/irvingplace.html
@@ -49,7 +49,9 @@
         <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
-        <p class="case-textblock">Successful investments begin by identifying potential value where others do not.  The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a prestige location.</p>
+        <p class="case-textblock">Successful investments begin by identifying potential value where others do not. The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property,
+          resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a
+          prestige location.</p>
         <hr>
         <p>6-story elevator building</p>
         <hr>
@@ -61,7 +63,9 @@
         <hr>
         <p>Office space</p>
         <hr>
-        <img class="roundmap" src="img/roundmap.png">
+        <div class="sp-maps">
+          <img class="img-circle roundmap" src="img/Map_IrvingPlace.jpg">
+        </div>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -78,7 +82,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Irving_render.png">
+        <img src="img/Irving-Render.png">
         <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree</p>
         <img class="img-circle" src="img/Irving/circle-min.jpg">
         <p class="case-textblock">A vibrant, highly walkable neighborhood with a range of amenities, including the famous greenmarket at Union Square</p>
