--- a/williamsburg.html
+++ b/williamsburg.html
@@ -49,7 +49,9 @@
         <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
-        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences.  The property features a prime location in a vibrant neighborhood,  close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan.  Moreover, many of the units can easy be converted into shared apartments, making them especially attractive to the young tenants.</p>
+        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences. The property features a prime location in a vibrant neighborhood, close proximity
+          to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan. Moreover, many of the units can easy be converted into shared apartments, making them especially attractive
+          to the young tenants.</p>
         <hr>
         <p>32 loft-style apartments</p>
         <hr>
@@ -57,7 +59,9 @@
         <hr>
         <p>3,000 square foot roof deck</p>
         <hr>
-        <img class="roundmap" src="img/williamsburg-map.png">
+        <div class="sp-maps">
+          <img class="img-circle roundmap" src="img/Map_Williamsburg.jpg">
+        </div>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -69,12 +73,12 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/A-min.jpg">
-            <p>A range of amenities – including a game room, full gym, and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
+            <p>A range of amenities – including a game room, full gym, and bike storage – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Williamsburg.png">
+        <img src="img/Williamsburg-Render.png">
         <p class="case-textblock">Expansive terraces and open-concept layouts make the property especially attractive to the neighborhood’s younger residents.</p>
         <img class="img-circle" src="img/Williamsburg/circle-min.jpg">
         <p class="case-textblock">East Williamsburg continues to grow in affluence while still retaining true neighborhood charm.</p>
