--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -49,7 +49,9 @@
         <p>Columbia University</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
-        <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized,  driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem.  Springhouse recognized this opportunity and invested in these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood.  Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
+        <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized, driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem. Springhouse recognized this opportunity and invested in these two
+          62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood. Moreover, their proximity to Columbia University and multiple subway lines add to the significant
+          upside potential.</p>
         <hr>
         <p>52 apartments, 7 retail stores</p>
         <hr>
@@ -57,7 +59,9 @@
         <hr>
         <p>5-minute walk to Columbia University</p>
         <hr>
-        <img class="roundmap" src="img/roundmap.png">
+        <div class="sp-maps">
+          <img class="img-circle roundmap" src="img/Map_ColumbiaUni.jpg">
+        </div>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -74,7 +78,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/columbia_render.png">
+        <img src="img/Columbia-Render.png">
         <p class="case-textblock">The majority of the units are 3-bedroom apartments, especially attractive to the area’s burgeoning professional class.</p>
         <img class="img-circle" src="img/Columbia/circle-min.jpg">
         <p class="case-textblock">A vibrant, thriving neighborhood poised to grow significantly with Columbia University’s multi-billion dollar expansion plans.</p>
