--- a/miamibeach.html
+++ b/miamibeach.html
@@ -49,7 +49,10 @@
         <p>Miami Beach</p>
         <h1>Hospitality Innovation</h1>
         <hr>
-        <p class="case-textblock">As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.<br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated lobby and communal spaces, and vibrant food and beverage programs.</p>
+        <p class="case-textblock">As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity
+          to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.
+          <br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated
+          lobby and communal spaces, and vibrant food and beverage programs.</p>
         <hr>
         <p>Blend of 70% shared rooms and 30% private rooms</p>
         <hr>
@@ -60,7 +63,9 @@
         <p>Culturally relevant design and branding throughout</p>
         <hr>
         <p>Younger target audience (21 – 39)</p>
-        <img class="roundmap" src="img/roundmap.png">
+        <div class="sp-maps">
+          <img class="img-circle roundmap" src="img/Map_MiamiBeach.jpg">
+        </div>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -77,7 +82,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Miami_render.png">
+        <img src="img/Miami-Render.png">
         <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look</p>
         <img class="img-circle" src="img/Miami/circle-min.jpg">
         <p class="case-textblock">A premier destination for younger travellers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix, and 24/7 entertainment</p>
