--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
           <a class="nav-link" id="selectProjects" href="selectprojects.html">Select Projects</a>
           <div class="dropdown-menu" id="selectProjectsList">
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
+            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
             <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
             <a class="dropdown-item" href="bedstuy.html">Bed-Stuy</a>
-            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
           </div>
         </li>
         <li class="nav-item">
@@ -59,11 +59,14 @@
               <br>Our approach is comprehensive. We consider every factor, from access to emerging consumer markets to neighborhood trends to cultural factors. We partner with the top architects, designers, and contractors. We use our asset and property management
               expertise to ensure each of our properties generate maximum premiums against costs and investment.</p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 remove-right">
             <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative
-              vision.</p>
+              vision.
+            </p>
             <hr>
-            <p class="quote text-xs-center">Entrepreneurial Spirit<br>+<br>Institutional Execution</p>
+            <p class="quote text-xs-center">Entrepreneurial Spirit
+              <br>+
+              <br>Institutional Execution</p>
             <hr>
           </div>
         </div>
@@ -72,8 +75,14 @@
           <hr class="subtitle-hr">
           <div class="col-xs-12">
             <div class="col-sm-6"><img class="media-fw portrait" src="img/portrait.png"></div>
-            <p>Adam Verner is the Founder and CEO of Springhouse Partners.  In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.  Since its inception in 2010,  Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.  Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York Metro area.  In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development.  Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection of mixed-use assets spread throughout New York City.
-Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized in opportunistic investments across all property types.  Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn.  Adam graduated with a business degree from American University in Washington, DC.</p>
+            <div class="col-xs-12">
+              <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess
+                of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.<br><br>Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York
+                Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection
+                of mixed-use assets spread throughout New York City.<br><br>Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge
+                fund which specialized in opportunistic investments across all property types. Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place
+                in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
+            </div>
           </div>
         </div>
         <!--  <div class="row">
@@ -107,11 +116,7 @@ Prior to joining Urban American, Adam was responsible for originating $500 milli
         </div> -->
       </div>
       <div class="col-sm-6 arrows-img-6">
-        <a class="about-carousel-open" href="#lb1"></a>
         <img class="media-fw" src="img/AboutPage-min.jpg">
-        <a href="#_" class="lightbox" id="lb1">
-          <img src="img/about-img.png">
-        </a>
       </div>
     </div>
   </div>
