--- a/bedstuy.html
+++ b/bedstuy.html
@@ -59,7 +59,7 @@
         <hr>
         <p>9-story elevator building</p>
         <hr>
-        <div class="sp-maps">
+        <div class="sp-maps bs-map">
           <img class="img-circle roundmap" src="img/Map_Bedford.jpg">
         </div>
       </div>
