--- a/irvingplace.html
+++ b/irvingplace.html
@@ -63,7 +63,7 @@
         <hr>
         <p>Office space</p>
         <hr>
-        <div class="sp-maps">
+        <div class="sp-maps ip-map">
           <img class="img-circle roundmap" src="img/Map_IrvingPlace.jpg">
         </div>
       </div>
