--- a/miamibeach.html
+++ b/miamibeach.html
@@ -63,7 +63,7 @@
         <p>Culturally relevant design and branding throughout</p>
         <hr>
         <p>Younger target audience (21 – 39)</p>
-        <div class="sp-maps">
+        <div class="sp-maps mb-map">
           <img class="img-circle roundmap" src="img/Map_MiamiBeach.jpg">
         </div>
       </div>
