--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -59,7 +59,7 @@
         <hr>
         <p>5-minute walk to Columbia University</p>
         <hr>
-        <div class="sp-maps">
+        <div class="sp-maps cu-map">
           <img class="img-circle roundmap" src="img/Map_ColumbiaUni.jpg">
         </div>
       </div>
