--- a/williamsburg.html
+++ b/williamsburg.html
@@ -59,7 +59,7 @@
         <hr>
         <p>3,000 square foot roof deck</p>
         <hr>
-        <div class="sp-maps">
+        <div class="sp-maps wb-map">
           <img class="img-circle roundmap" src="img/Map_Williamsburg.jpg">
         </div>
       </div>
