--- a/irvingplace.html
+++ b/irvingplace.html
@@ -76,7 +76,20 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving/A-min.jpg">
+            <div id="Irving-carousel" class="carousel slide home-carousel-img selectProjects-carousel" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              </ol>
+              <div class="carousel-inner home-carousel-img" role="listbox">
+                <div class="carousel-item active" id="firstSlide">
+                  <img src="img/Irving/A-min.jpg" alt="Irving">
+                </div>
+                <div class="carousel-item" id="secondSlide">
+                  <img src="img/Irving/B-min.jpg" alt="Irving">
+                </div>
+              </div>
+            </div>
             <p>An upscale mixology bar (“Dear Irving”) occupies 2,400 sf at the property and includes the lavish private room pictured above, drawing a sophisticated and celebrity clientele.</p>
           </div>
         </div>
@@ -120,6 +133,11 @@
           }, 1000);
       }
     );
+  </script>
+  <script>
+  $('#Irving-carousel').click(function() {
+    $('#Irving-carousel').carousel('next');
+  });
   </script>
 </body>
 
