--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div class="container-fluid" id="home">
     <div class="row home-carousel">
-      <div class="col-xs-12 arrows-img">
+      <div class="col-xs-12">
         <div id="home-carousel" class="carousel slide home-carousel-img" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -137,7 +137,7 @@
     );
   </script>
   <script>
-  $('.arrows-img').click(function() {
+  $('#home-carousel').click(function() {
     $('#home-carousel').carousel('next');
   });
   </script>
