--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <div class="col-xs-12">
             <div class="col-sm-6">
               <img class="media-fw portrait" src="img/portrait.png">
-              <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess
+              <p class="pull-30">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess
                 of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.<br><br>Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York
                 Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development.</p>
             </div>
