--- a/bedstuy.html
+++ b/bedstuy.html
@@ -51,7 +51,8 @@
         <hr>
         <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn
           as an great opportunity. It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other
-          institutions.</p>
+          institutions.
+        </p>
         <hr>
         <p>64,000 square feet</p>
         <hr>
@@ -72,20 +73,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div id="BedStuy-carousel" class="carousel slide home-carousel-img selectProjects-carousel" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              </ol>
-              <div class="carousel-inner home-carousel-img" role="listbox">
-                <div class="carousel-item active" id="firstSlide">
-                  <img src="img/BedStuy/A-min.jpg" alt="BedStuy">
-                </div>
-                <div class="carousel-item" id="secondSlide">
-                  <img src="img/BedStuy/B-min.jpg" alt="BedStuy">
-                </div>
-              </div>
-            </div>
+            <img src="img/BedStuy/A-min.jpg" alt="BedStuy">
             <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture</p>
           </div>
         </div>
@@ -129,11 +117,6 @@
           }, 1000);
       }
     );
-  </script>
-  <script>
-  $('#BedStuy-carousel').click(function() {
-    $('#BedStuy-carousel').carousel('next');
-  });
   </script>
 </body>
 
