--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             expertise to ensure each of our properties generate maximum premiums against costs and investment.</p>
             <hr>
             <p class="quote text-xs-center">Entrepreneurial Spirit
-              <br>+
+              <br>&amp;
               <br>Institutional Execution</p>
             <hr>
             <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative
@@ -71,56 +71,29 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <p class="subtitle">Adam Verner</p>
-          <hr class="subtitle-hr">
-          <div class="col-xs-12">
-            <div class="col-sm-6">
-              <img class="media-fw portrait" src="img/portrait.png">
-              <p class="pull-30">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess
-                of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.<br><br>Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York
-                Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development.</p>
-            </div>
-            <div class="col-sm-6">
-              <p>Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection
-              of mixed-use assets spread throughout New York City.<br><br>Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge
-              fund which specialized in opportunistic investments across all property types. Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place
-              in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
-            </div>
-          </div>
-        </div>
-        <!--  <div class="row">
-          <p class="subtitle">Development</p>
-          <hr class="subtitle-hr">
-          <div class="col-xs-6 remove-gutters">
-            <ul class="remove-gutters">
-              <li><a href="irvingplace.html"><span>Irving Place</span></a>
-                <br>1342 Broadway
-                <br>55 Wythe Avenue</li>
-              <li><a href="columbiauniversity.html"><span>Columbia University</span></a>
-                <br>Meserole Condominium
-                <br>324 23rd Street
-                <br>98 Broad Boulevard
-                <br>Vanderbilt Residences
-                <br>Washington lofts</li>
-            </ul>
-          </div>
-          <div class="col-xs-6 remove-gutters">
-            <ul class="remove-gutters">
-              <li>1342 Broadway
-                <br>55 Wythe Avenue</li>
-              <li><a href="bedstuy.html"><span>Bed-Stuy Miami Beach</span></a>
-                <br>Meserole Condominium
-                <br>324 23rd Street
-                <br>Vanderbilt Residences
-                <br>Washington lofts</li>
-              <li><a href="williamsburg.html"><span>Williamsburg</span></a></li>
-            </ul>
-          </div>
-        </div> -->
       </div>
-      <div class="col-sm-6 arrows-img-6">
-        <img class="media-fw" src="img/AboutPage-min.jpg">
+      <div class="col-sm-6 arrows-img-6 fixed-padding">
+        <p class="subtitle invisible-subtitle">Our Story</p>
+        <hr class="subtitle-hr invisible-subtitle-hr">
+        <img class="media-fw" src="img/About.jpg">
+      </div>
+    </div>
+    <div class="row">
+      <p class="subtitle">Adam Verner</p>
+      <hr class="subtitle-hr">
+      <div class="col-xs-12">
+        <div class="col-sm-6">
+          <img class="media-fw portrait" src="img/portrait.png">
+          <p class="pull-30">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess
+            of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.<br><br>Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York
+            Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development.</p>
+        </div>
+        <div class="col-sm-6">
+          <p>Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection
+          of mixed-use assets spread throughout New York City.<br><br>Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge
+          fund which specialized in opportunistic investments across all property types. Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place
+          in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
+        </div>
       </div>
     </div>
   </div>
