--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           </ol>
           <div class="carousel-inner home-carousel-img" role="listbox">
             <div class="carousel-item active" id="firstSlide">
-              <img src="img/Home_1.jpg" alt="Flatiron View">
+              <img src="img/Home-1.jpg" alt="Flatiron View">
             </div>
             <div class="carousel-item" id="secondSlide">
-              <img src="img/Home_2.jpg" alt="The Office">
+              <img src="img/Home-2.jpg" alt="The Office">
             </div>
           </div>
         </div>
@@ -64,13 +64,16 @@
     </div>
     <div class="row home-text">
       <div class="col-sm-6">
-        <p class="text-xs-left text-uppercase subtitle">Overview</p>
         <hr class="subtitle-hr">
         <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
-          development. Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel
-          assets throughout New York City and South Florida.</p>
+          development.</p>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-6">
+        <hr class="subtitle-hr">
+        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel
+        assets throughout New York City and South Florida.</p>
+      </div>
+      <!--<div class="col-sm-3">
         <p class="text-xs-left text-uppercase subtitle">Address</p>
         <hr class="subtitle-hr">
         <a href="">
@@ -90,7 +93,7 @@
           <p>+1 212 596 6960</p>
         </a>
         <hr class="hidden-xs-down">
-      </div>
+      </div> -->
     </div>
   </div>
 
