--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,11 @@
         <a href="tel:+12125966960">
           <p>T: 212 596 6960</p>
         </a>
+        <p>Maintenance and leasing inquiries:</p>
+        <a href="mailto:maintenance@springhousepartners.com">
+          <p>maintenance@springhousepartners.com</p>
+        </a>
+        <p>General business inquiries:</p>
         <a href="mailto:info@springhousepartners.com">
           <p>info@springhousepartners.com</p>
         </a>
